<resources>
    <string name="app_name">TestHockey</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="match_results">Match results</string>
    <string name="today_s_matches">Today \'s matches</string>
    <string name="past_matches">Past matches</string>
    <string name="match_details">Match Details</string>
    <string name="statistic_match">Statistic Match</string>
    <string name="flag">Flag</string>
    <string name="flag_country">Flag country</string>
    <string name="shots_on_goal">Shots on goal</string>
    <string name="penalty_time">Penalty time</string>
    <string name="face_offs_won">Face - offs won</string>
    <string name="_1st_third">1st third</string>
    <string name="_2nd_third">2nd third</string>
    <string name="_3rd_third">3rd third</string>
    <string name="hockey_reference_guide">Hockey Reference Guide</string>
    <string name="assistant">Assistant</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="team_1">Team 1</string>
    <string name="team_2_app_layout_constraintend_toendof">Team 2</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="reset">Reset</string>
    <string name="_60_00">60 : 00</string>
    <string name="get_coins">Get Coins</string>
    <string name="save">Save</string>
    <string name="open_view">open view</string>
    <string name="desc_one_screen">On the Match results screen, you can see the statistics of past matches for coins.</string>
    <string name="desc_second_screen">On the Hockey reference guide screen, you can familiarize yourself with the hockey rules.</string>
    <string name="desc_third_screen">On this screen you can earn coins to open the match statistics view.</string>
    <string name="desc_fourth_screen">On this screen you can follow the match in real time.</string>
    <string name="finish">Finish</string>
</resources>